# qbot

./: .env_pub  .gitignore  README.md  bot.py  pyproject.toml
src/plugins/nonebot_plugin_spam/: __init__.py  common.py  config.py  db.py  spam_common.py  spam_db.py
src/plugins/nonebot_plugin_status/: __init__.py  common.py  onebot_v11.py
tests/: __init__.py  conftest.py  pytest.ini
tests/nonebot_plugin_spam/: test_common.py  test_db.py
